gitops/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: engame-api
  ports:
    - port: 8080
      targetPort: 8080
