gitops/base/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: engame-front
spec:
  selector:
    app: engame-front
  ports:
    - port: 80
      targetPort: 80
